Fix missing space after breadcrumb

--- a/themes/maik-blog/assets/scss/_main.scss
+++ b/themes/maik-blog/assets/scss/_main.scss
@@ -476,6 +476,10 @@ table {
 
         li {
             display: inline;
+
+            &::after {
+                content: " > ";
+            }
         }
     }
 }
