--- a/themes/maik-blog/assets/scss/_posts.scss
+++ b/themes/maik-blog/assets/scss/_posts.scss
@@ -57,6 +57,12 @@
             font-size: 1.1rem;
             margin: 5px 0 10px 0;
             font-weight: 600;
+
+            .breadcrumbs {
+                li:last-child::after {
+                    display: none;
+                }
+            }
         }
 
         &-year {
